# docs/swagger.yaml
@@ -68,7 +68,7 @@ definitions:
           $ref: '#/definitions/response.Content'
         type: array
     type: object
-  response.BannerId:
+  response.BannerID:
     properties:
       banner_id:
         description: Идентификатор созданного баннера
@@ -167,7 +167,7 @@ paths:
         "201":
           description: Баннер успешно добавлен в систему
           schema:
-            $ref: '#/definitions/response.BannerId'
+            $ref: '#/definitions/response.BannerID'
         "400":
           description: Некорректные данные
           schema:
@@ -327,8 +327,7 @@ paths:
       - auth
   /user_banner:
     get:
-      description: Возвращает баннер на основании тэга группы пользователей, фичи
-        и версии, если версия не указана, то вернётся последняя.
+      description: '|'
       parameters:
       - description: Идентификатор тэга группы пользователей
         in: query
